--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.active{
+  border-bottom: 2px solid blue;
+  padding-bottom: 2px;
+  font-size: 17px;
+  font-weight: 500;
+}
 .nav{
   width: 100%;
   height: 20vh;
   position: fixed;
   top: 0;
   background: #fff;
+  
   
   z-index: 2;
   
